<resources>
    <string name="app_name">Cabify Store</string>
    <!-- Store Product List -->
    <string name="product_list_fragment_label">Store Product list</string>
    <string name="see_discounts">See discounts</string>
    <string name="no_products_available">No products available.</string>
    <string name="checkout_action">Checkout</string>

    <!-- Store Discount List -->
    <string name="no_discounts_available">No discounts available.</string>
    <string name="product">Product</string>
    <string name="discount">Discount</string>
    <string name="discounts">Discounts</string>
    <string name="discounts_dialog_label">Current discounts</string>
    <string name="discounts_for_chosen_product_title">%s discounts</string>
    <string name="close">Close</string>

    <!-- Add to cart -->
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_cart_confirmation_title">Add products to cart</string>
    <plurals name="add_to_cart_confirmation_message">
        <item quantity="one">Do you want to add one &lt;b>%2$s&lt;/b> to the shopping cart?</item>
        <item quantity="other">Do you want to add %1$d units of &lt;b>%2$s&lt;/b> to the shopping cart?</item>
    </plurals>
    <plurals name="added_to_cart_feedback">
        <item quantity="one">Added &lt;b>%2$s&lt;/b> to the shopping cart.</item>
        <item quantity="other">Added %1$d units of &lt;b>%2$s&lt;/b> to the shopping cart.</item>
    </plurals>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="unimplemented_discounts_user_feedback">Some new discounts are unavailable, please update your application to get them. If after the update the error persists, please contact the developer.</string>
    <string name="generic_error_user_feedback">An error occurred</string>
    <string name="products_network_error_user_feedback">There was an error retrieving products from the network.</string>
    <string name="product_db_write_error_user_feedback">There was an error storing the last products information.</string>
    <string name="product_db_read_error_user_feedback">There was an error retrieving stored products.</string>
    <string name="discounts_network_error_user_feedback">There was an error retrieving discounts from the network.</string>
    <string name="discount_db_write_error_user_feedback">There was an error storing the last discounts information.</string>
    <string name="discount_db_read_error_user_feedback">There was an error retrieving stored discounts.</string>
    <string name="error_feedback_report_action">Report</string>
    <string name="error_feedback_title">Errors occurred:\n%s</string>
    <string name="error_report_email_title">Error report</string>
    <string name="error_report_mail_client_chooser_title">Send report via email</string>
    <string name="x_for_y_discount">Buy %1$d and pay %2$d</string>
    <string name="buy_in_bulk_discount">Discount of %1$s when buying at least %2$d</string>
    <string name="unimplemented_discount_not_available">Not available</string>

    <!-- Checkout -->
    <string name="checkout_fragment_label">Checkout</string>
    <string name="checkout_list_empty_cart_message">Shopping cart is empty.</string>
    <string name="checkout_total">Total</string>
    <string name="checkout_header_product">Product</string>
    <string name="checkout_header_price">Price</string>
    <string name="checkout_header_quantity">Quantity</string>
    <string name="checkout_header_amount">Amount</string>
    <string name="checkout_header_discount">Discount</string>
    <string name="checkout_clear_shopping_cart_action">Clear shopping cart</string>
    <string name="device_offline_user_feedback">Could not retrieve data from network. Your device seems to be offline. You may see products and discounts if they are available locally, but you will need to wait for the connection to be restored to make purchases.</string>
    <string name="connection_restored_feedback">Internet connection has been restored.</string>
    <string name="connection_lost_feedback">Your device seems to be offline. You may see products and discounts if they are available locally, but you will need to wait for the connection to be restored to make purchases.</string>
    <string name="retrieve_discounted_products_error_user_feedback">There was an error getting discounted products</string>

    <string name="retrieving_data">Retrieving data…</string>
</resources>