<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.garcia.ignacio.storeclassic.ui.productlist.ProductListFragment"
        android:label="@string/product_list_fragment_label"
        tools:layout="@layout/fragment_product_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/CheckoutFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_discountsDialog"
            app:destination="@id/discountsDialog" />
    </fragment>
    <fragment
        android:id="@+id/CheckoutFragment"
        android:name="com.garcia.ignacio.storeclassic.ui.checkout.CheckoutFragment"
        android:label="@string/checkout_fragment_label"
        tools:layout="@layout/fragment_checkout">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_CheckoutFragment_to_discountsDialog"
            app:destination="@id/discountsDialog" />
    </fragment>
    <dialog
        android:id="@+id/discountsDialog"
        android:name="com.garcia.ignacio.storeclassic.ui.discountlist.DiscountsDialog"
        android:label="@string/discounts_dialog_label"
        tools:layout="@layout/dialog_discounts" />
</navigation>